Fix crash with context menu on lineedit

Now we get the menu from lineEdit() and handle it ourselves, so we can properly check if it's shown or hidden in FocusOut event.

Reviewed-by: David Edmundson
BUG: 301823
FIXED-IN: 0.4.1